Fix missing space after block h2s (compare page)

--- a/www/css.css
+++ b/www/css.css
@@ -186,6 +186,7 @@ ul.staff ul {
 }
 
 .block h2 {
+  padding-right: 0.5em;
   padding-bottom: 0;
   margin-bottom: 0;
 }
